[workspace]
members = [
    "crates/jiter",
    "crates/jiter-python",
    "crates/batson",
    "crates/fuzz",
]
resolver = "2"

[workspace.package]
authors = ["Samuel Colvin <samuel@pydantic.dev>"]
version = "0.5.0"
edition = "2021"
license = "MIT"
keywords = ["JSON", "parsing", "deserialization", "iter"]
categories = ["parser-implementations", "parsing"]
homepage = "https://github.com/pydantic/jiter/"
repository = "https://github.com/pydantic/jiter/"
# MSRV should match pydantic-core
rust-version = "1.75"

[profile.bench]
debug = true
lto = true
opt-level = 3
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
jiter = { path = "crates/jiter", version = "0.5.0" }
batson = { path = "crates/batson", version = "0.5.0" }
pyo3 = { version = "0.22.0" }
pyo3-build-config = { version = "0.22.0" }
bencher = "0.1.5"
paste = "1.0.7"
codspeed-bencher-compat = "2.7.1"
smallvec = "2.0.0-alpha.7"
serde = "1.0.210"
serde_json = "1.0.128"
