[workspace]
members = ["crates/jiter", "crates/jiter-python"]
exclude = ["crates/fuzz"]
resolver = "2"

[workspace.package]
authors = ["Samuel Colvin <samuel@pydantic.dev>"]
version = "0.13.0"
edition = "2024"
license = "MIT"
keywords = ["JSON", "parsing", "deserialization", "iter"]
categories = ["parser-implementations", "parsing"]
homepage = "https://github.com/pydantic/jiter/"
repository = "https://github.com/pydantic/jiter/"
# MSRV should match pydantic-core
rust-version = "1.88"

[profile.bench]
debug = true
lto = true
opt-level = 3
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
pyo3 = { version = "0.28.2" }
pyo3-build-config = { version = "0.28.2" }
