[package]
name = "batson"
description = "Binary Alternative To (J)SON. Designed to be very fast to query."
readme = "../../README.md"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
license = {workspace = true}
keywords = {workspace = true}
categories = {workspace = true}
homepage = {workspace = true}
repository = {workspace = true}

[dependencies]
bytemuck = { version = "1.17.1", features = ["aarch64_simd", "derive", "align_offset"] }
jiter = { workspace = true }
serde = "1.0.210"
serde_json = "1.0.128"
simdutf8 = { version = "0.1.4", features = ["aarch64_neon"] }
smallvec = "2.0.0-alpha.7"

[dev-dependencies]
bencher = { workspace = true }
paste = { workspace = true }
codspeed-bencher-compat = { workspace = true }

[[bench]]
name = "main"
harness = false

[lints.clippy]
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# in general we lint against the pedantic group, but we will whitelist
# certain lints which we don't want to enforce (for now)
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
cast_possible_truncation = "allow"  # TODO remove
cast_sign_loss = "allow"  # TODO remove
cast_possible_wrap = "allow"  # TODO remove
checked_conversions = "allow"  # TODO remove
