[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "jiter"
requires-python = ">=3.8"
authors = [
    {name = "Samuel Colvin", email = "s@muelcolvin.com"}
]
dynamic = [
    "description",
    "license",
    "readme",
    "version"
]

[tool.maturin]
module-name = "jiter_python"
bindings = "pyo3"
features = ["pyo3/extension-module"]
