[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "jiter"
description = "Fast iterable JSON parser."
requires-python = ">=3.8"
authors = [
    {name = "Samuel Colvin", email = "s@muelcolvin.com"}
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Topic :: File Formats :: JSON",
    "Framework :: Pydantic :: 2",
]
dynamic = ["version"]

[tool.maturin]
module-name = "jiter"
bindings = "pyo3"
features = ["pyo3/extension-module", "pyo3/generate-import-lib"]

[tool.ruff.format]
quote-style = 'single'
