[package]
name = "jiter"
description = "Fast Iterable JSON parser"
readme = "../../README.md"
version = {workspace = true}
edition = {workspace = true}
authors = {workspace = true}
license = {workspace = true}
keywords = {workspace = true}
categories = {workspace = true}
homepage = {workspace = true}
repository = {workspace = true}

[dependencies]
num-bigint = "0.4.4"
num-traits = "0.2.16"
ahash = "0.8.0"
smallvec = "1.11.0"
pyo3 = { version = "0.21.0", default-features=false, features = ["num-bigint"], optional = true }
lexical-parse-float = { version = "0.8.5", features =  ["format"] }

[features]
python = ["dep:pyo3", "dep:pyo3-build-config"]

[dev-dependencies]
bencher = "0.1.5"
paste = "1.0.7"
serde_json = {version = "1.0.87", features = ["preserve_order", "arbitrary_precision", "float_roundtrip"]}
serde = "1.0.147"
pyo3 = { version = "0.21.0", default-features=false, features = ["num-bigint", "auto-initialize"] }
codspeed-bencher-compat = "2.3.1"

[build-dependencies]
pyo3-build-config = { version = "0.21.0", optional = true }

[[test]]
name = "python"
required-features = ["python"]

[[bench]]
name = "main"
harness = false

[[bench]]
name = "python"
required-features = ["python"]
harness = false

# get docs.rs to include python docs
[package.metadata.docs.rs]
all-features = true
