[package]
name = "jiter"
description = "Fast Iterable JSON parser"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
num-bigint = { workspace = true, optional = true }
num-traits = { workspace = true }
ahash = "0.8.0"
smallvec = { workspace = true }
pyo3 = { workspace = true, optional = true, features = ["num-bigint"] }
lexical-parse-float = { version = "0.8.5", features =  ["format"] }
bitvec = "1.0.1"

[features]
default = ["num-bigint"]
python = ["dep:pyo3", "dep:pyo3-build-config"]
num-bigint = ["dep:num-bigint", "pyo3/num-bigint"]

[dev-dependencies]
bencher = { workspace = true }
paste = { workspace = true }
codspeed-bencher-compat = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order", "arbitrary_precision", "float_roundtrip"]}
serde = { workspace = true }
pyo3 = { workspace = true, features = ["auto-initialize"] }

[build-dependencies]
pyo3-build-config = { workspace = true, optional = true }

[[test]]
name = "python"
required-features = ["python"]

[[bench]]
name = "main"
harness = false

[[bench]]
name = "python"
required-features = ["python"]
harness = false

# get docs.rs to include python docs
[package.metadata.docs.rs]
all-features = true

[lints.clippy]
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# in general we lint against the pedantic group, but we will whitelist
# certain lints which we don't want to enforce (for now)
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
if_not_else = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
match_bool = "allow"
doc_markdown = "allow"
implicit_clone = "allow"
iter_without_into_iter = "allow"
return_self_not_must_use = "allow"
inline_always = "allow"                      # TODO remove?
match_same_arms = "allow"                    # TODO remove?
